src/app/home/slider/slider.component.scss
@import '../../../variables';

$slider-height: 45%;
$slider-height-medium: 70%;
$slider-height-small: 120%;

:host {
  display: block;
  height: 0;
  padding-bottom: $slider-height;
  position: relative;

  .right,
  .left {
    bottom: 0;
    color: $white;
    cursor: pointer;
    font-size: 60px;
    height: 1em;
    margin: auto;
    position: absolute;
    top: 0;
  }

  .left {
    left: 2%;
  }

  .right {
    right: 2%;
  }

  @media (max-width: $mobile-break-point) {
    padding-bottom: $slider-height-medium;

    .right,
    .left {
      font-size: 40px;
      padding: 0;
    }

    .left {
      left: 4%;
    }

    .right {
      right: 4%;
    }
  }
  @media (max-width: $mobile-break-point-small) {
    padding-bottom: $slider-height-small;
  }
}

app-header-default {
  height: 0;
  padding-bottom: $slider-height;
  @media (max-width: $mobile-break-point) {
    padding-bottom: $slider-height-medium;
  }
  @media (max-width: $mobile-break-point-small) {
    padding-bottom: $slider-height-small;
  }
}

app-loading {
  bottom: 0;
  height: 80px;
  left: 0;
  margin: auto;
  position: absolute;
  right: 0;
  top: 0;
}

ngx-siema {
  background: $white;
  bottom: 0;
  left: 0;
  opacity: 1;
  position: absolute;
  right: 0;
  top: 0;
  transition: .33s opacity ease-in;
}

ngx-siema-slide {
  .slide-content {
    color: $white;
    left: 0;
    margin: auto;
    position: absolute;
    right: 0;
    top: 20%;

    .title {
      text-align: center;
    }
  }
}

.slider-paging {
  bottom: 5%;
  display: flex;
  height: 28px;
  justify-content: center;
  left: 0;
  margin: auto;
  position: absolute;
  right: 0;
  z-index: 999;

  .slider-paging-button {
    $size: 10px;
    border: 1px solid $white;
    border-radius: 50%;
    cursor: pointer;
    height: $size;
    line-height: 1;
    margin: 10px;
    padding: 0;
    width: $size;

    &.current {
      background-color: $white;
    }
  }
}

